--- a/systemd/nofan.service
+++ b/systemd/nofan.service
@@ -8,7 +8,7 @@ RuntimeDirectory=nofan
 RuntimeDirectoryMode=0755
 Group=wheel
 ExecStart=/usr/bin/nofan run
-# ExecStopPost=/bin/sh -c "ectool autofanctrl"
+ExecStopPost=/bin/sh -c "ectool autofanctrl"
 
 [Install]
 WantedBy=multi-user.target
